--- a/wsgiadmin/useradmin/templates/login.html
+++ b/wsgiadmin/useradmin/templates/login.html
@@ -102,7 +102,7 @@
 				</form>
 
 				<ul style="clear:both;">
-					<li>Ještě nemáte účet? Nevadí, <a href="{% url useradmin.views.reg %}">klikněte sem</a> a vytvořte si ho.</li>
+					<li>Ještě nemáte účet? Nevadí, <a href="{% url wsgiadmin.useradmin.views.reg %}">klikněte sem</a> a vytvořte si ho.</li>
 				</ul>
 			
 			</div> <!-- End #login-content -->
