--- a/wsgiadmin/useradmin/templates/reg.html
+++ b/wsgiadmin/useradmin/templates/reg.html
@@ -76,7 +76,7 @@
 
 			<div id="login-content">
 
-		<form action="{% url useradmin.views.reg %}" method="post" id="regform">
+		<form action="{% url wsgiadmin.useradmin.views.reg %}" method="post" id="regform">
 		<h2>{% trans "Kontaktní informace" %}</h2>
 		<table>
 		{{ form1.as_table }}
