--- a/wsgiadmin/bills/templates/bill.html
+++ b/wsgiadmin/bills/templates/bill.html
@@ -42,19 +42,19 @@
 		<tr>
 			<td colspan="3">
 					<div class="pagination">
-						{% if items.has_previous %}<a href="{% url bills.views.show type 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if items.has_previous %}<a href="{% url bills.views.show type emails.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+						{% if items.has_previous %}<a href="{% url wsgiadmin.bills.views.show type 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
+						{% if items.has_previous %}<a href="{% url wsgiadmin.bills.views.show type emails.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
 							{% ifequal p num_page %}
-								<a href="{% url bills.views.show type p %}" class="number current" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.bills.views.show type p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
-								<a href="{% url bills.views.show type p %}" class="number" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.bills.views.show type p %}" class="number" title="{{ p }}">{{ p }}</a>
 							{% endifequal %}
 						{% endfor %}
 
-						{% if items.has_next %}<a href="{% url bills.views.show type items.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if items.has_next %}<a href="{% url bills.views.show type paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+						{% if items.has_next %}<a href="{% url wsgiadmin.bills.views.show type items.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
+						{% if items.has_next %}<a href="{% url wsgiadmin.bills.views.show type paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
 					</div>
 					<div class="clear"></div>
 			</td>
