--- a/wsgiadmin/emails/templates/redirects.html
+++ b/wsgiadmin/emails/templates/redirects.html
@@ -10,8 +10,8 @@
 	function remove(what) {
 		var removed_id = "#removed_"+what;
 		$("#remove_"+what).hide();
-		$.get("{% url emails.views.removeRedirect 0 %}"+what, function (data){
-			document.location = '{% url emails.views.redirects %}';
+		$.get("{% url wsgiadmin.emails.views.removeRedirect 0 %}"+what, function (data){
+			document.location = '{% url wsgiadmin.emails.views.redirects %}';
 		});
 	}
 	</script>
@@ -20,7 +20,7 @@
 
 {% trans "<p>Všechny informace týkající se e-mailů najdete na Wiki na adrese" %} <a href='{{ WIKI_URL }}/e-maily' target="_blank">{{ WIKI_URL }}/e-maily</a>.</p>
 
-<p><a href="{% url emails.views.addRedirect %}">Přidat nové přesměrování</a></p>
+<p><a href="{% url wsgiadmin.emails.views.addRedirect %}">Přidat nové přesměrování</a></p>
 
 <div id="message-box"></div>
 
@@ -41,7 +41,7 @@
 			<td>{{ redirect.email }}</td>
 			<td><a href="{{ redirect.getUrl }}">{{ redirect.getUrl }}</a></td>
 			<td>
-				<a href="{% url emails.views.changeRedirect redirect.id %}"><img src="/m/icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
+				<a href="{% url wsgiadmin.emails.views.changeRedirect redirect.id %}"><img src="/m/icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
 
 				<a href="#" id="remove_{{redirect.id}}" onclick="if(confirm('{% trans "Opravdu chcete přesměrování zrušit?" %}')) {remove('{{redirect.id}}');};" class="bold"><img src="/m/icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %} /></a>
 				<span id="removed_{{redirect.id}}" class="info"></span>
@@ -53,19 +53,19 @@
 		<tr>
 			<td colspan="3">
 					<div class="pagination">
-						{% if redirects.has_previous %}<a href="{% url emails.views.redirects 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if redirects.has_previous %}<a href="{% url emails.views.redirects redirects.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+						{% if redirects.has_previous %}<a href="{% url wsgiadmin.emails.views.redirects 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
+						{% if redirects.has_previous %}<a href="{% url wsgiadmin.emails.views.redirects redirects.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
 							{% ifequal p num_page %}
-								<a href="{% url emails.views.redirects p %}" class="number current" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.emails.views.redirects p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
-								<a href="{% url emails.views.redirects p %}" class="number" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.emails.views.redirects p %}" class="number" title="{{ p }}">{{ p }}</a>
 							{% endifequal %}
 						{% endfor %}
 
-						{% if redirects.has_next %}<a href="{% url emails.views.redirects redirects.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if redirects.has_next %}<a href="{% url emails.views.redirects paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+						{% if redirects.has_next %}<a href="{% url wsgiadmin.emails.views.redirects redirects.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
+						{% if redirects.has_next %}<a href="{% url wsgiadmin.emails.views.redirects paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
 					</div>
 					<div class="clear"></div>
 			</td>
@@ -74,7 +74,7 @@
 	{% else %}
 	<tbody>
 	<tr>
-		<td colspan="3">{% trans "Žádné přesměrování nebylo ještě vytvořeno. Můžete ho vytvořit" %} <a href="{% url emails.views.addRedirect %}">{% trans "kliknutím sem" %}</a>.</td>
+		<td colspan="3">{% trans "Žádné přesměrování nebylo ještě vytvořeno. Můžete ho vytvořit" %} <a href="{% url wsgiadmin.emails.views.addRedirect %}">{% trans "kliknutím sem" %}</a>.</td>
 	</tr>
 	</tbody>
 	{% endif%}
