--- a/wsgiadmin/ftps/templates/ftps.html
+++ b/wsgiadmin/ftps/templates/ftps.html
@@ -8,7 +8,7 @@
 {% block content %}
 <script type="text/javascript">
 	function remove(what) {
-		$("#ftp_"+what).load("{% url ftps.views.rm 0 %}"+what)
+		$("#ftp_"+what).load("{% url wsgiadmin.ftps.views.rm 0 %}"+what)
 	}
 </script>
 <div id="message-box"></div>
@@ -28,8 +28,8 @@
 			<td>{{ ftp.username }}</td>
 			<td>{{ ftp.dir }}</td>
 			<td id="ftp_{{ ftp.id }}">
-				<a href="{% url ftps.views.passwd ftp.id %}" title="{% trans "Změnit heslo" %}"><img src="/m/icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
-				<a href="{% url ftps.views.update ftp.id %}" title="{% trans "Upravit" %}"><img src="/m/icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.passwd ftp.id %}" title="{% trans "Změnit heslo" %}"><img src="/m/icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.update ftp.id %}" title="{% trans "Upravit" %}"><img src="/m/icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
 				<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('Opravdu chcete smazat doménu {{ ftp.name }}?')) remove({{ ftp.id }})"><img src="/m/icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}" /></a>
 			</td>
 		</tr>
@@ -39,19 +39,19 @@
 		<tr>
 			<td colspan="3">
 					<div class="pagination">
-						{% if ftps.has_previous %}<a href="{% url ftps.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if ftps.has_previous %}<a href="{% url ftps.views.show ftps.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
+						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show ftps.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
 							{% ifequal p num_page %}
-								<a href="{% url ftps.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.ftps.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
-								<a href="{% url ftps.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
+								<a href="{% url wsgiadmin.ftps.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
 							{% endifequal %}
 						{% endfor %}
 
-						{% if ftps.has_next %}<a href="{% url ftps.views.show ftps.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if ftps.has_next %}<a href="{% url ftps.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show ftps.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
+						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
 					</div>
 					<div class="clear"></div>
 			</td>
