--- a/wsgiadmin/users/templates/users.html
+++ b/wsgiadmin/users/templates/users.html
@@ -8,7 +8,7 @@
 {% block content %}
 <script type="text/javascript">
 	function remove(what) {
-		$("#user_"+what).load("{% url users.views.rm 0 %}"+what)
+		$("#user_"+what).load("{% url wsgiadmin.users.views.rm 0 %}"+what)
 	}
 </script>
 <div id="message-box"></div>
@@ -50,9 +50,9 @@
 						<td>{{ user.parms.count_pgs }}×/{{ user.parms.count_mys }}×</td>
 						<td>{{ user.parms.home_size }}</td>
 						<td id="user_{{ user.id }}">
-							<a href="{% url users.views.switch_to_user user.id num_page %}">Přepnout</a>
-							<a href="{% url users.views.install user.id %}" title="Upravit">Nainstalovat</a>
-							<a href="{% url users.views.update user.id %}" title="Upravit"><img src="/m/images/icons/pencil.png" alt="Upravit" /></a>
+							<a href="{% url wsgiadmin.users.views.switch_to_user user.id num_page %}">Přepnout</a>
+							<a href="{% url wsgiadmin.users.views.install user.id %}" title="Upravit">Nainstalovat</a>
+							<a href="{% url wsgiadmin.users.views.update user.id %}" title="Upravit"><img src="/m/images/icons/pencil.png" alt="Upravit" /></a>
 							<a href="#" title="Smazat" onclick="if(confirm('Opravdu chcete smazat uživatele {{ user.id }}?')) remove('{{ user.id }}')"><img src="/m/images/icons/cross.png" alt="Smazat" /></a> 
 						</td>
 					</tr>
@@ -62,19 +62,19 @@
 					<tr>
 						<td colspan="9">
 								<div class="pagination">
-									{% if users.has_previous %}<a href="{% url users.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-									{% if users.has_previous %}<a href="{% url users.views.show users.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
+									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show users.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 				
 									{% for p in paginator.page_range %}
 										{% ifequal p num_page %}
-											<a href="{% url users.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
+											<a href="{% url wsgiadmin.users.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
 										{% else %}
-											<a href="{% url users.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
+											<a href="{% url wsgiadmin.users.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
 										{% endifequal %}
 									{% endfor %}
 				
-									{% if users.has_next %}<a href="{% url users.views.show users.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-									{% if users.has_next %}<a href="{% url users.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show users.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
+									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
 								</div>
 								<div class="clear"></div>
 						</td>
