--- a/wsgiadmin/useradmin/templates/admin.html
+++ b/wsgiadmin/useradmin/templates/admin.html
@@ -1,22 +1,25 @@
 {% load i18n %}
-{% load i18n %}
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Nový design administrace</title>
-
 
 	<link rel="stylesheet/less" type="text/css" href="/m/cssng/ngstyle.less">
 	<link rel="stylesheet" type="text/css" href="/m/uni-form/css/uni-form.css">
 	<link rel="stylesheet" type="text/css" href="/m/uni-form/css/default.uni-form.css">
-	<link rel="stylesheet" href="/m/css/jquery-ui-1.8.9.custom.css" type="text/css" media="screen" />
-	<!--<link rel="stylesheet" type="text/css" href="/m/uni-form/css/dark.uni-form.css">-->
+	<link rel="stylesheet" type="text/css" href="/m/css/admin.css">
+	{# <link rel="stylesheet" href="/m/css/jquery-ui-1.8.9.custom.css" type="text/css" media="screen" /> #}
+	{# <link rel="stylesheet" type="text/css" href="/m/uni-form/css/dark.uni-form.css"> #}
 	<script type="text/javascript" src="/m/js/jquery-1.4.4.min.js"></script>
-	<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>-->
+	{# <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> #}
 	<script src="/m/js/less-1.0.41.min.js" type="text/javascript"></script>
 	<script src="/m//uni-form/js/uni-form.jquery.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/m/js/jquery-ui-1.8.9.custom.min.js"></script> 
-
+	<script type="text/javascript" src="/m/js/jquery-ui-1.8.9.custom.min.js"></script>
+	<script type="text/javascript" src="/m/js/jquery.cookie.js"></script>
+	<script type="text/javascript">
+		{% block jsblock %}{% endblock %}
+	</script>
 </head>
 <body>
 
